cmake_minimum_required(VERSION 3.15)
project(lem_in C)

add_custom_target(fff
		COMMAND make rule
		WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_compile_options(-Weverything)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft)

add_executable(lem_in
		includes/ft_queue.h
		includes/lem_in.h
		libft/avlt.c
		libft/avlt.h
		libft/avlt_balance.c
		libft/avlt_del.c
		libft/avlt_tranc.c
		libft/ft_abs.c
		libft/ft_atoi.c
		libft/ft_bzero.c
		libft/ft_delchr.c
		libft/ft_isalnum.c
		libft/ft_isalpha.c
		libft/ft_isascii.c
		libft/ft_isdigit.c
		libft/ft_isprint.c
		libft/ft_itoa.c
		libft/ft_itoa_base.c
		libft/ft_lstadd.c
		libft/ft_lstadd_back.c
		libft/ft_lstdel.c
		libft/ft_lstdelone.c
		libft/ft_lstiter.c
		libft/ft_lstlast.c
		libft/ft_lstmap.c
		libft/ft_lstnew.c
		libft/ft_lstsize.c
		libft/ft_memalloc.c
		libft/ft_memcat.c
		libft/ft_memccpy.c
		libft/ft_memchr.c
		libft/ft_memcmp.c
		libft/ft_memcpy.c
		libft/ft_memdel.c
		libft/ft_memfjoin.c
		libft/ft_memjoin.c
		libft/ft_memmove.c
		libft/ft_memrchr.c
		libft/ft_memset.c
		libft/ft_memsub.c
		libft/ft_numlen.c
		libft/ft_printf.h
		libft/ft_putchar.c
		libft/ft_putchar_fd.c
		libft/ft_putcharn.c
		libft/ft_putendl.c
		libft/ft_putendl_fd.c
		libft/ft_putnbr.c
		libft/ft_putnbr_fd.c
		libft/ft_putstr.c
		libft/ft_putstr_fd.c
		libft/ft_stoa.c
		libft/ft_strcat.c
		libft/ft_strchlen.c
		libft/ft_strchr.c
		libft/ft_strchtrim.c
		libft/ft_strclr.c
		libft/ft_strcmp.c
		libft/ft_strcpy.c
		libft/ft_strdel.c
		libft/ft_strdup.c
		libft/ft_strequ.c
		libft/ft_striter.c
		libft/ft_striteri.c
		libft/ft_strjoin.c
		libft/ft_strlcat.c
		libft/ft_strlen.c
		libft/ft_strmap.c
		libft/ft_strmapi.c
		libft/ft_strncat.c
		libft/ft_strncmp.c
		libft/ft_strncpy.c
		libft/ft_strnequ.c
		libft/ft_strnew.c
		libft/ft_strnstr.c
		libft/ft_strrchr.c
		libft/ft_strsplit.c
		libft/ft_strstr.c
		libft/ft_strsub.c
		libft/ft_strtolower.c
		libft/ft_strtrim.c
		libft/ft_swap.c
		libft/ft_tolower.c
		libft/ft_toupper.c
		libft/get_next_line.c
		libft/get_next_line.h
		libft/libft.h
		srcs/avlt_services.c
		srcs/edm_karp_alg.c
		srcs/edm_karp_mk_path.c
		srcs/edm_karp_mk_twin.c
		srcs/ft_bfs.c
		srcs/ft_lem_cnstrctrs.c
		srcs/ft_lem_free.c
		srcs/ft_lem_release_antsi.c
		srcs/ft_queue.c
		srcs/main.c
		srcs/parse.c
		srcs/qnode_services.c)
