cmake_minimum_required(VERSION 3.15)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(printf)
include_directories(printf/libft)

add_executable(lem_in
		includes/ft_queue.h
		includes/lem_in.h
		printf/libft/avlt.c
		printf/libft/avlt.h
		printf/libft/avlt_balance.c
		printf/libft/avlt_del.c
		printf/libft/avlt_tranc.c
		printf/libft/ft_abs.c
		printf/libft/ft_atoi.c
		printf/libft/ft_bzero.c
		printf/libft/ft_delchr.c
		printf/libft/ft_isalnum.c
		printf/libft/ft_isalpha.c
		printf/libft/ft_isascii.c
		printf/libft/ft_isdigit.c
		printf/libft/ft_isprint.c
		printf/libft/ft_itoa.c
		printf/libft/ft_itoa_base.c
		printf/libft/ft_lstadd.c
		printf/libft/ft_lstadd_back.c
		printf/libft/ft_lstdel.c
		printf/libft/ft_lstdelone.c
		printf/libft/ft_lstiter.c
		printf/libft/ft_lstlast.c
		printf/libft/ft_lstmap.c
		printf/libft/ft_lstnew.c
		printf/libft/ft_lstsize.c
		printf/libft/ft_memalloc.c
		printf/libft/ft_memcat.c
		printf/libft/ft_memccpy.c
		printf/libft/ft_memchr.c
		printf/libft/ft_memcmp.c
		printf/libft/ft_memcpy.c
		printf/libft/ft_memdel.c
		printf/libft/ft_memfjoin.c
		printf/libft/ft_memjoin.c
		printf/libft/ft_memmove.c
		printf/libft/ft_memrchr.c
		printf/libft/ft_memset.c
		printf/libft/ft_memsub.c
		printf/libft/ft_numlen.c
		printf/libft/ft_printf.h
		printf/libft/ft_putchar.c
		printf/libft/ft_putchar_fd.c
		printf/libft/ft_putcharn.c
		printf/libft/ft_putendl.c
		printf/libft/ft_putendl_fd.c
		printf/libft/ft_putnbr.c
		printf/libft/ft_putnbr_fd.c
		printf/libft/ft_putstr.c
		printf/libft/ft_putstr_fd.c
		printf/libft/ft_stoa.c
		printf/libft/ft_strcat.c
		printf/libft/ft_strchlen.c
		printf/libft/ft_strchr.c
		printf/libft/ft_strchtrim.c
		printf/libft/ft_strclr.c
		printf/libft/ft_strcmp.c
		printf/libft/ft_strcpy.c
		printf/libft/ft_strdel.c
		printf/libft/ft_strdup.c
		printf/libft/ft_strequ.c
		printf/libft/ft_striter.c
		printf/libft/ft_striteri.c
		printf/libft/ft_strjoin.c
		printf/libft/ft_strlcat.c
		printf/libft/ft_strlen.c
		printf/libft/ft_strmap.c
		printf/libft/ft_strmapi.c
		printf/libft/ft_strncat.c
		printf/libft/ft_strncmp.c
		printf/libft/ft_strncpy.c
		printf/libft/ft_strnequ.c
		printf/libft/ft_strnew.c
		printf/libft/ft_strnstr.c
		printf/libft/ft_strrchr.c
		printf/libft/ft_strsplit.c
		printf/libft/ft_strstr.c
		printf/libft/ft_strsub.c
		printf/libft/ft_strtolower.c
		printf/libft/ft_strtrim.c
		printf/libft/ft_swap.c
		printf/libft/ft_tolower.c
		printf/libft/ft_toupper.c
		printf/libft/get_next_line.c
		printf/libft/get_next_line.h
		printf/libft/libft.h
		printf/addcharn.c
		printf/b.c
		printf/big_hex.c
		printf/binary.c
		printf/c.c
		printf/di.c
		printf/di_ifelse_precison.c
		printf/f.c
		printf/f_round.c
		printf/fraction.c
		printf/fraction_path.c
		printf/ft_printf.c
		printf/ft_printf.h
		printf/ft_vector.c
		printf/func.c
		printf/hex.c
		printf/integer.c
		printf/math_op_with_the_five.c
		printf/multy_two.c
		printf/nan.c
		printf/o.c
		printf/octal.c
		printf/octal_chck_flags.c
		printf/oflags.c
		printf/oktotorp.c
		printf/parse.c
		printf/percent.c
		printf/print_f.c
		printf/s.c
		printf/select_round.c
		printf/u.c
		printf/uflags.c
		printf/uinteger.c
		printf/whole.c
		printf/x.c
		printf/x_check_flags.c
		printf/xflags.c
		srcs/avlt_services.c
		srcs/edm_karp_alg.c
		srcs/edm_karp_del_edge.c
		srcs/edm_karp_edge_work.c
		srcs/edm_karp_mk_path.c
		srcs/edm_karp_mk_twin.c
		srcs/ft_bfs.c
		srcs/ft_bfs_clear_all.c
		srcs/ft_lem_cnstrctrs.c
		srcs/ft_lem_free.c
		srcs/ft_lem_log.c
		srcs/ft_lem_release_antsi.c
		srcs/ft_lem_release_antsi_serv.c
		srcs/ft_queue.c
		srcs/parse.c
		srcs/qnode_services.c
		srcs/test_with_parse.c)
